--- a/.editorconfig
+++ b/.editorconfig
@@ -8,3 +8,5 @@ dotnet_diagnostic.CS1718.severity = none
 
 # IDE1006: Naming Styles
 dotnet_diagnostic.IDE1006.severity = none
+
+csharp_indent_case_contents_when_block = false
