--- a/EEMod.csproj
+++ b/EEMod.csproj
@@ -15,13 +15,13 @@
     <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define &quot;$(DefineConstants)&quot; -unsafe $(AllowUnsafeBlocks)" />
   </Target>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />
+    <!--<PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />-->
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Office.Interop.Excel">
+    <!--<Reference Include="Microsoft.Office.Interop.Excel">
       <HintPath>..\..\..\..\..\..\Downloads\Microsoft.Office.Interop.Excel\Microsoft.Office.Interop.Excel.dll</HintPath>
-    </Reference>
+    </Reference>-->
     <Reference Include="System.Configuration" />
   </ItemGroup>
 </Project>
