Effect Loading easier, Twitter, some other shit idunno its like 3am

--- a/EEMod.csproj
+++ b/EEMod.csproj
@@ -9,5 +9,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
+    <PackageReference Include="TweetinviAPI" Version="5.0.4" />
   </ItemGroup>
 </Project>
