--- a/EEMod.csproj
+++ b/EEMod.csproj
@@ -10,6 +10,11 @@
   <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="SubworldLibrary">
+      <HintPath>..\..\..\..\..\..\..\Downloads\SubworldLibrary.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <Target Name="CompileEffects" BeforeTargets="Build">
     <Exec WorkingDirectory="Effects" Command="fxcompiler_reach.exe" />
   </Target>
