--- a/EEMod.csproj
+++ b/EEMod.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="SubworldLibrary">
-      <HintPath>..\..\..\..\..\..\..\Downloads\SubworldLibrary.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Downloads\SubworldLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Target Name="CompileEffects" BeforeTargets="Build">
