--- a/EEMod.csproj
+++ b/EEMod.csproj
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\..\references\tModLoader.targets" />
+  <Import Project="..\tModLoader.targets" />
   <PropertyGroup>
     <AssemblyName>EEMod</AssemblyName>
-    <TargetFramework>net45</TargetFramework>
-    <PlatformTarget>x86</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <TargetFramework>net6.0</TargetFramework>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <Optimize>false</Optimize>
-  </PropertyGroup>
-  <Target Name="BuildMod" AfterTargets="Build">
-    <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define &quot;$(DefineConstants)&quot; -unsafe $(AllowUnsafeBlocks)" />
-  </Target>
   <ItemGroup>
-    <!--<PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />-->
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
-    <!--<Reference Include="Microsoft.Office.Interop.Excel">
-      <HintPath>..\..\..\..\..\..\Downloads\Microsoft.Office.Interop.Excel\Microsoft.Office.Interop.Excel.dll</HintPath>
-    </Reference>-->
-    <Reference Include="System.Configuration" />
+    <Reference Include="SubworldLibrary">
+      <HintPath>..\..\..\..\..\..\Downloads\SubworldLibrary.dll</HintPath>
+    </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Skies\" />
+  </ItemGroup>
+  <Target Name="CompileEffects" BeforeTargets="Build">
+    <Exec WorkingDirectory="Effects" Command="fxcompiler_reach.exe" />
+  </Target>
 </Project>
