--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -10,6 +10,12 @@
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
+  <PropertyGroup>
+    <DotNetPath Condition=" '$(OS)' == 'Windows_NT' ">dotnet.exe</DotNetPath>
+    <DotNetPath Condition=" '$(OS)' == 'Unix' ">dotnet</DotNetPath>
+    <DotNetPath Condition=" '$(DotNetPath)' == '' ">dotnet</DotNetPath>
+  </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
     </ItemGroup>
