Cleans up templates; fixes inconsistencies

--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -1,6 +1,6 @@
 name: "🐛 Bug Report"
 description: Create a new issue for a bug report.
-title: "🐛 [BUG] - <title>"
+title: "<title>"
 labels: [
   "Bug",
   "New Issue"
@@ -11,19 +11,14 @@ body:
     attributes:
       label: "Description"
       description: Please enter an explicit description of your issue
-      placeholder: Clear and concise description of your issue...
+      placeholder: Clear and concise description of your issue.
     validations:
       required: true
   - type: textarea
     id: reprod
     attributes:
       label: "Reproduction steps"
-      description: Please enter an explicit description of your issue
-      value: |
-        1. Go to '...'
-        2. Click on '....'
-        3. Scroll down to '....'
-        4. See error
+      description: Please enter an explicit description of your issue.
       render: bash
     validations:
       required: true
@@ -31,9 +26,7 @@ body:
     id: screenshot
     attributes:
       label: "Screenshots"
-      description: If possible, attach screenshots to help demonstrate your issue.
-      value: |
-        ![DESCRIPTION](LINK.png)
+      description: If possible, attach screenshots to help further demonstrate your issue.
       render: bash
     validations:
       required: false
@@ -41,19 +34,7 @@ body:
     id: logs
     attributes:
       label: "Logs"
-      description: Please copy and paste any relevant log output, if any. 
+      description: Please copy and paste any relevant log output, if any.
       render: bash
-    validations:
-      required: false
-  - type: dropdown
-    id: os
-    attributes:
-      label: "OS"
-      description: In what OS does the bug occur?
-      multiple: true
-      options:
-        - Windows
-        - Linux
-        - Mac
     validations:
       required: false
