--- a/.github/ISSUE_TEMPLATE/ENHANCEMENT_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/ENHANCEMENT_REQUEST.yml
@@ -10,15 +10,13 @@ body:
     id: summary
     attributes:
       label: "Summary"
-      description: Provide a brief explanation of the request
-      placeholder: Describe your request.
+      description: Provide a brief explanation of the request.
     validations:
       required: true
   - type: textarea
     id: reasonings
     attributes:
       label: "Reasonings"
-      description: Provide reasons why your request should be taken into account
-      placeholder: Supply purposes and meaningfulness of your request.
+      description: Provide reasons why your request should be taken into account.
     validations:
       required: true
