--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: Discord Server
     url: https://discord.gg/aFnqEFB
-    about: Please get in touch with developers here
+    about: Need extra assistance? Get in touch directly with developers here.
