--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -21,7 +21,7 @@ body:
       render: bash
     validations:
       required: false
-  - type: textarea
+  - type: markdown
     id: screenshot
     attributes:
       label: "Screenshots"
