--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -1,5 +1,5 @@
 name: "🐛 Bug Report"
-description: Create a new issue for a bug report.
+description: Create an issue for a bug report.
 title: "<title>"
 labels: [
   "Bug",
@@ -10,21 +10,21 @@ body:
     id: description
     attributes:
       label: "Description"
-      description: Please enter an explicit description of your issue
+      description: Please enter an explicit description of your issue.
     validations:
       required: true
   - type: textarea
     id: reprod
     attributes:
       label: "Reproduction steps"
-      description: Please enter an explicit description of your issue.
+      description: Please demonstrate the steps to replicate your issue, if known about.
     validations:
       required: false
   - type: textarea
     id: screenshot
     attributes:
       label: "Screenshots"
-      description: If possible, attach screenshots to help further demonstrate your issue.
+      description: Please attach screenshots to help further demonstrate your issue.
     validations:
       required: false
   - type: textarea
