--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -30,6 +30,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Assets\Structures\Ambient\" />
+      <Folder Include="Assets\Structures\Music\" />
+      <Folder Include="Assets\Structures\Sounds\" />
       <Folder Include="Content\NPCs\" />
     </ItemGroup>
 </Project>
