--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -21,15 +21,18 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Remove="**/*.png" />
+        <None Remove="**/*.ogg" />
+        <None Remove="**/*.mp3" />
+        <None Remove="**/*.wav" />
+    </ItemGroup>
+    
+    <ItemGroup>
         <Reference Include="StructureHelper">
             <HintPath>lib\StructureHelper.dll</HintPath>
         </Reference>
         <Reference Include="SubworldLibrary">
             <HintPath>lib\SubworldLibrary.dll</HintPath>
         </Reference>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Folder Include="Content\NPCs\" />
     </ItemGroup>
 </Project>
