--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -28,4 +28,8 @@
             <HintPath>lib\SubworldLibrary.dll</HintPath>
         </Reference>
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Content\Walls\Reefs\Tropical" />
+    </ItemGroup>
 </Project>
