--- a/.editorconfig
+++ b/.editorconfig
@@ -10,9 +10,8 @@ indent_size = 4
 csharp_new_line_before_open_brace = types
 csharp_preferred_modifier_order = public, private, protected, internal, file, new, static, abstract, virtual, sealed, readonly, override, extern, unsafe, volatile, async, required:suggestion
 csharp_style_prefer_utf8_string_literals = true:suggestion
-csharp_style_var_elsewhere = false:suggestion
+csharp_style_var_elsewhere = false:none
 csharp_style_var_for_built_in_types = false:suggestion
-csharp_style_var_when_type_is_apparent = false:suggestion
 dotnet_naming_rule.private_constants_rule.import_to_resharper = as_predefined
 dotnet_naming_rule.private_constants_rule.severity = warning
 dotnet_naming_rule.private_constants_rule.style = upper_camel_case_style
@@ -81,6 +80,7 @@ resharper_csharp_wrap_before_invocation_rpar = true
 resharper_csharp_wrap_extends_list_style = chop_if_long
 resharper_csharp_wrap_parameters_style = chop_if_long
 resharper_default_value_when_type_not_evident = default_expression
+resharper_for_built_in_types = use_var_when_evident
 resharper_indent_nested_fixed_stmt = true
 resharper_indent_nested_foreach_stmt = true
 resharper_indent_nested_for_stmt = true
