--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -30,6 +30,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="Content\Items\Shipyard" />
         <Folder Include="Content\Walls\Reefs\Tropical" />
     </ItemGroup>
 </Project>
