--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ csharp_new_line_before_open_brace = types
 csharp_preferred_modifier_order = public, private, protected, internal, file, new, static, abstract, virtual, sealed, readonly, override, extern, unsafe, volatile, async, required:suggestion
 csharp_style_prefer_utf8_string_literals = true:suggestion
 csharp_style_var_elsewhere = true:suggestion
-csharp_style_var_for_built_in_types = false:suggestion
+csharp_style_var_for_built_in_types = true:suggestion
 csharp_style_var_when_type_is_apparent = true:suggestion
 dotnet_naming_rule.private_constants_rule.import_to_resharper = as_predefined
 dotnet_naming_rule.private_constants_rule.severity = warning
@@ -67,20 +67,24 @@ dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggest
 resharper_align_multiline_binary_expressions_chain = false
 resharper_align_multiline_statement_conditions = false
 resharper_autodetect_indent_settings = true
+resharper_blank_lines_after_multiline_statements = 1
+resharper_blank_lines_around_block_case_section = 1
+resharper_blank_lines_around_multiline_case_section = 1
+resharper_blank_lines_around_single_line_local_method = 1
+resharper_blank_lines_before_multiline_statements = 1
 resharper_braces_for_for = required
 resharper_braces_for_foreach = required
 resharper_braces_for_ifelse = required
 resharper_braces_for_while = required
+resharper_csharp_blank_lines_around_single_line_invocable = 1
 resharper_csharp_empty_block_style = together_same_line
 resharper_csharp_stick_comment = false
-resharper_csharp_wrap_after_declaration_lpar = true
 resharper_csharp_wrap_after_invocation_lpar = true
 resharper_csharp_wrap_arguments_style = chop_if_long
-resharper_csharp_wrap_before_declaration_rpar = true
+resharper_csharp_wrap_before_binary_opsign = true
 resharper_csharp_wrap_before_invocation_rpar = true
 resharper_csharp_wrap_extends_list_style = chop_if_long
 resharper_csharp_wrap_parameters_style = chop_if_long
-resharper_default_value_when_type_not_evident = default_expression
 resharper_indent_nested_fixed_stmt = true
 resharper_indent_nested_foreach_stmt = true
 resharper_indent_nested_for_stmt = true
@@ -91,6 +95,7 @@ resharper_indent_preprocessor_region = no_indent
 resharper_keep_existing_embedded_arrangement = false
 resharper_keep_existing_initializer_arrangement = false
 resharper_keep_existing_invocation_parens_arrangement = false
+resharper_keep_existing_linebreaks = false
 resharper_keep_existing_list_patterns_arrangement = false
 resharper_keep_existing_property_patterns_arrangement = false
 resharper_keep_existing_switch_expression_arrangement = false
@@ -100,6 +105,8 @@ resharper_new_line_before_while = true
 resharper_place_accessorholder_attribute_on_same_line = false
 resharper_place_accessor_attribute_on_same_line = false
 resharper_place_field_attribute_on_same_line = false
+resharper_place_linq_into_on_new_line = false
+resharper_place_simple_accessor_on_single_line = false
 resharper_place_simple_anonymousmethod_on_single_line = false
 resharper_place_simple_embedded_statement_on_same_line = false
 resharper_place_simple_initializer_on_single_line = false
@@ -108,6 +115,7 @@ resharper_place_simple_property_pattern_on_single_line = false
 resharper_show_autodetect_configure_formatting_tip = false
 resharper_use_indent_from_vs = false
 resharper_wrap_array_initializer_style = chop_always
+resharper_wrap_before_eq = true
 resharper_wrap_chained_binary_expressions = chop_if_long
 resharper_wrap_chained_binary_patterns = chop_if_long
 resharper_wrap_chained_method_calls = chop_if_long
