--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -32,4 +32,8 @@
     <ItemGroup>
         <Folder Include="Content\Walls\Reefs\Tropical" />
     </ItemGroup>
+
+  <Target BeforeTargets="Build" Name="BuildEffects" Inputs="Assets/Effects/Compiler/*.fx" Outputs="Assets/Effects/Compiler/*.xnb">
+    <Exec Command="fxcompiler_reach.exe" WorkingDirectory="Assets/Effects/Compiler"/>
+  </Target>
 </Project>
