--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -30,10 +30,11 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="Common\NPCs\" />
         <Folder Include="Content\Walls\Reefs\Tropical" />
     </ItemGroup>
 
   <Target BeforeTargets="Build" Name="BuildEffects" Inputs="Assets/Effects/Compiler/*.fx" Outputs="Assets/Effects/Compiler/*.xnb">
-    <Exec Command="fxcompiler_reach.exe" WorkingDirectory="Assets/Effects/Compiler"/>
+    <Exec Command="fxcompiler_reach.exe" WorkingDirectory="Assets/Effects/Compiler" />
   </Target>
 </Project>
