--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -30,6 +30,10 @@
         </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Common\Bases\" />
+    </ItemGroup>
+
   <Target BeforeTargets="Build" Name="BuildEffects" Inputs="Assets/Effects/Compiler/*.fx" Outputs="Assets/Effects/Compiler/*.xnb">
     <Exec Command="fxcompiler_reach.exe" WorkingDirectory="Assets/Effects/Compiler" />
   </Target>
