--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,6 @@
+
 [*]
-charset = utf-8
+charset = utf-8-bom
 end_of_line = crlf
 trim_trailing_whitespace = false
 insert_final_newline = false
@@ -7,6 +8,7 @@ indent_style = space
 indent_size = 4
 
 # Microsoft .NET properties
+csharp_new_line_before_members_in_object_initializers = false
 csharp_new_line_before_open_brace = types
 csharp_preferred_modifier_order = public, private, protected, internal, file, new, static, abstract, virtual, sealed, readonly, override, extern, unsafe, volatile, async, required:suggestion
 csharp_style_prefer_utf8_string_literals = true:suggestion
@@ -35,6 +37,12 @@ dotnet_naming_rule.unity_serialized_field_rule.resharper_guid = 5f0fdb63-c892-4d
 dotnet_naming_rule.unity_serialized_field_rule.severity = warning
 dotnet_naming_rule.unity_serialized_field_rule.style = lower_camel_case_style
 dotnet_naming_rule.unity_serialized_field_rule.symbols = unity_serialized_field_symbols
+dotnet_naming_rule.unity_serialized_field_rule_1.import_to_resharper = True
+dotnet_naming_rule.unity_serialized_field_rule_1.resharper_description = Unity serialized field
+dotnet_naming_rule.unity_serialized_field_rule_1.resharper_guid = 5f0fdb63-c892-4d2c-9324-15c80b22a7ef
+dotnet_naming_rule.unity_serialized_field_rule_1.severity = warning
+dotnet_naming_rule.unity_serialized_field_rule_1.style = lower_camel_case_style
+dotnet_naming_rule.unity_serialized_field_rule_1.symbols = unity_serialized_field_symbols_1
 dotnet_naming_style.lower_camel_case_style.capitalization = camel_case
 dotnet_naming_style.upper_camel_case_style.capitalization = pascal_case
 dotnet_naming_symbols.private_constants_symbols.applicable_accessibilities = private
@@ -47,11 +55,15 @@ dotnet_naming_symbols.private_static_fields_symbols.applicable_kinds = field
 dotnet_naming_symbols.private_static_fields_symbols.required_modifiers = static
 dotnet_naming_symbols.private_static_readonly_symbols.applicable_accessibilities = private
 dotnet_naming_symbols.private_static_readonly_symbols.applicable_kinds = field
-dotnet_naming_symbols.private_static_readonly_symbols.required_modifiers = static, readonly
+dotnet_naming_symbols.private_static_readonly_symbols.required_modifiers = static,readonly
 dotnet_naming_symbols.unity_serialized_field_symbols.applicable_accessibilities = *
-dotnet_naming_symbols.unity_serialized_field_symbols.applicable_kinds =
+dotnet_naming_symbols.unity_serialized_field_symbols.applicable_kinds = 
 dotnet_naming_symbols.unity_serialized_field_symbols.resharper_applicable_kinds = unity_serialised_field
 dotnet_naming_symbols.unity_serialized_field_symbols.resharper_required_modifiers = instance
+dotnet_naming_symbols.unity_serialized_field_symbols_1.applicable_accessibilities = *
+dotnet_naming_symbols.unity_serialized_field_symbols_1.applicable_kinds = 
+dotnet_naming_symbols.unity_serialized_field_symbols_1.resharper_applicable_kinds = unity_serialised_field
+dotnet_naming_symbols.unity_serialized_field_symbols_1.resharper_required_modifiers = instance
 dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:none
 dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:none
 dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:none
@@ -64,64 +76,54 @@ dotnet_style_qualification_for_property = false:suggestion
 dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggestion
 
 # ReSharper properties
-resharper_align_multiline_binary_expressions_chain = false
-resharper_align_multiline_statement_conditions = false
 resharper_autodetect_indent_settings = true
-resharper_blank_lines_after_multiline_statements = 1
-resharper_blank_lines_around_block_case_section = 1
-resharper_blank_lines_around_multiline_case_section = 1
-resharper_blank_lines_around_single_line_local_method = 1
-resharper_blank_lines_before_multiline_statements = 1
 resharper_braces_for_for = required
 resharper_braces_for_foreach = required
 resharper_braces_for_ifelse = required
 resharper_braces_for_while = required
-resharper_csharp_blank_lines_around_single_line_invocable = 1
-resharper_csharp_empty_block_style = together_same_line
-resharper_csharp_stick_comment = false
-resharper_csharp_wrap_after_invocation_lpar = true
+resharper_braces_redundant = false
+resharper_cpp_insert_final_newline = false
+resharper_csharp_empty_block_style = together
+resharper_csharp_insert_final_newline = true
+resharper_csharp_max_line_length = 200
+resharper_csharp_naming_rule.private_constants = AaBb
+resharper_csharp_naming_rule.private_static_fields = aaBb
+resharper_csharp_naming_rule.private_static_readonly = AaBb
 resharper_csharp_wrap_arguments_style = chop_if_long
 resharper_csharp_wrap_before_binary_opsign = true
-resharper_csharp_wrap_before_invocation_rpar = true
 resharper_csharp_wrap_extends_list_style = chop_if_long
 resharper_csharp_wrap_parameters_style = chop_if_long
+resharper_enforce_line_ending_style = true
+resharper_formatter_off_tag = @formatter:off
+resharper_formatter_on_tag = @formatter:on
+resharper_formatter_tags_enabled = true
 resharper_indent_nested_fixed_stmt = true
 resharper_indent_nested_foreach_stmt = true
 resharper_indent_nested_for_stmt = true
 resharper_indent_nested_lock_stmt = true
 resharper_indent_nested_usings_stmt = true
 resharper_indent_nested_while_stmt = true
-resharper_indent_preprocessor_region = no_indent
+resharper_keep_existing_declaration_parens_arrangement = false
 resharper_keep_existing_embedded_arrangement = false
-resharper_keep_existing_initializer_arrangement = false
-resharper_keep_existing_invocation_parens_arrangement = false
-resharper_keep_existing_linebreaks = false
-resharper_keep_existing_list_patterns_arrangement = false
-resharper_keep_existing_property_patterns_arrangement = false
-resharper_keep_existing_switch_expression_arrangement = false
-resharper_max_enum_members_on_line = 0
-resharper_max_initializer_elements_on_line = 0
+resharper_keep_existing_expr_member_arrangement = false
 resharper_new_line_before_while = true
+resharper_object_creation_when_type_evident = explicitly_typed
 resharper_place_accessorholder_attribute_on_same_line = false
-resharper_place_accessor_attribute_on_same_line = false
-resharper_place_field_attribute_on_same_line = false
-resharper_place_linq_into_on_new_line = false
+resharper_place_accessor_attribute_on_same_line = true
+resharper_place_record_field_attribute_on_same_line = true
 resharper_place_simple_accessor_on_single_line = false
-resharper_place_simple_anonymousmethod_on_single_line = false
 resharper_place_simple_embedded_statement_on_same_line = false
-resharper_place_simple_initializer_on_single_line = false
-resharper_place_simple_list_pattern_on_single_line = false
-resharper_place_simple_property_pattern_on_single_line = false
+resharper_prefer_separate_deconstructed_variables_declaration = true
 resharper_show_autodetect_configure_formatting_tip = false
 resharper_use_indent_from_vs = false
-resharper_wrap_array_initializer_style = chop_always
+resharper_wrap_array_initializer_style = chop_if_long
 resharper_wrap_before_eq = true
 resharper_wrap_chained_binary_expressions = chop_if_long
 resharper_wrap_chained_binary_patterns = chop_if_long
 resharper_wrap_chained_method_calls = chop_if_long
-resharper_wrap_list_pattern = chop_always
-resharper_wrap_object_and_collection_initializer_style = chop_always
-resharper_wrap_property_pattern = chop_always
+resharper_wrap_list_pattern = chop_if_long
+resharper_wrap_switch_expression = chop_if_long
+resharper_xmldoc_max_line_length = 200
 
 # ReSharper inspection severities
 resharper_arrange_redundant_parentheses_highlighting = hint
@@ -138,7 +140,7 @@ resharper_web_config_module_not_resolved_highlighting = warning
 resharper_web_config_type_not_resolved_highlighting = warning
 resharper_web_config_wrong_module_highlighting = warning
 
-[{*.har,*.inputactions,*.jsb2,*.jsb3,*.json,.babelrc,.eslintrc,.stylelintrc,bowerrc,jest.config}]
+[{*.har,*.jsb2,*.jsb3,*.json,.babelrc,.eslintrc,.stylelintrc,bowerrc,jest.config}]
 indent_style = space
 indent_size = 2
 
