--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,5 +9,6 @@ jobs:
     runs-on: windows-latest
     
     steps:
+      - uses: actions/checkout@v3
       - name: Build mod
         run: dotnet build EndlessEscapade.sln
