--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,9 @@ jobs:
     runs-on: windows-latest
     
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v3
         with:
           name: tModLoader/tModLoader
-          ref: refs/heads/release
     
       - name: Build tModLoader
         run: dotnet build src/tModLoader/Terraria/Terraria.csproj -c Release --nologo -v q -bl;
