--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,4 +16,4 @@ jobs:
           submodules: recursive
     
       - name: Build tModLoader
-        run: ls
+        run: dotnet build src/tModLoader/Terraria/Terraria.csproj 
