--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,5 @@ jobs:
     
       - name: Build tModLoader
         run: | 
-          dir /s /b
+          dir
           dotnet build ./tModLoader/src/tModLoader/Terraria/Terraria.csproj 
