--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Clone tModLoader
-        uses: actions/checkout@v3
+        uses: actions/checkout@master
         with:
           name: tModLoader/tModLoader
           submodules: recursive
