--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Clone tModLoader
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
         with:
-          name: tModLoader/tModLoader
+          repository: tModLoader/tModLoader
           submodules: recursive
     
       - name: Build tModLoader
