--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: tModLoader/tModLoader
+          path: ./tModLoader
           submodules: recursive
     
       - name: Build tModLoader
