--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,4 +19,20 @@ jobs:
           submodules: recursive
     
       - name: Build tModLoader
-        run: ./tModLoader/setup.bat
+        run: dir
+        
+      - name: Build mod
+        run: dotnet build EndlessEscapade.sln
+        
+      - name: Upload mod
+        uses: actions/upload-artifact@v3
+        with:
+          name: Mod file (TEST)
+          path: EndlessEscapade.sln
+    
+      - name: Deploy mod
+        uses: sarisia/actions-status-discord@v1  
+        if: always()
+        with:
+          webhook: ${{ secrets.DISCORD_WEBHOOK_DEPLOY }}
+          description: "Mod build has been successfully accomplished."
