--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Endless Escapade
+name: Build Mod
 
 on:
   push:
@@ -11,28 +11,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Clone tModLoader
-        uses: actions/checkout@v3
-        with:
-          repository: tModLoader/tModLoader
-          path: ./tModLoader
-          submodules: recursive
+      - name: Download tModLoader
+        run: |
+          curl -L https://github.com/tModLoader/tModLoader/releases/download/v2023.06.25.31/tModLoader.zip -o tModLoader.zip
+          unzip -o tModLoader.zip -d ./tModLoader
     
       - name: Build tModLoader
         run: dir
         
       - name: Build mod
         run: dotnet build EndlessEscapade.sln
-        
-      - name: Upload mod
-        uses: actions/upload-artifact@v3
-        with:
-          name: Mod file (TEST)
-          path: EndlessEscapade.sln
-    
+
       - name: Deploy mod
         uses: sarisia/actions-status-discord@v1  
         if: always()
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK_DEPLOY }}
-          description: "Mod build has been successfully accomplished."
+          description: "His name is Jeff."
