--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Generate targets file
         run: |
-          cat >> tModLoader.targets << EOF
+          cat >> tModLoader.targets <<EOF
           <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
             <Import Project="..\..\tModLoader\tMLMod.targets" />
           </Project>
@@ -33,4 +33,4 @@ jobs:
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK_DEPLOY }}
           description: |
-            Action available [here](https://github.com/EndlessEscapade/EndlessEscapade/actions/runs/${{ github.run_id }})
+            Click [here] to view action(https://github.com/EndlessEscapade/EndlessEscapade/actions/runs/${{ github.run_id }})
