--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Generate targets file
         shell: bash
         run: |
-          cat >> tModLoader.targets << EOF
+          cat >> ../tModLoader.targets << EOF
           <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
             <Import Project="..\..\tModLoader\tMLMod.targets" />
           </Project>
@@ -36,4 +36,4 @@ jobs:
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK_DEPLOY }}
           description: |
-            Click [here](https://github.com/EndlessEscapade/EndlessEscapade/actions/runs/${{ github.run_id }}) to view action.
+            Click [here](https://github.com/EndlessEscapade/EndlessEscapade/actions/runs/${{ github.run_id }}) to view full action reports.
