--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Download tModLoader
         run: |
           curl -s -L https://github.com/tModLoader/tModLoader/releases/latest/download/tModLoader.zip -o tModLoader.zip
-          unzip -q -o tModLoader.zip -d ./tModLoader
+          unzip -q -o tModLoader.zip -d ../tModLoader
 
       - name: Generate targets file
         shell: bash
