--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           EOF
 
       - name: Reformat mod solution
-        run: dotnet reformat EndlessEscapade.sln --verify-no-changes
+        run: dotnet reformat style EndlessEscapade.sln
 
       - name: Build mod solution
         run: dotnet build EndlessEscapade.sln --configuration Release
