--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,9 @@ jobs:
           curl -s -L https://github.com/tModLoader/tModLoader/releases/latest/download/tModLoader.zip -o tModLoader.zip
           unzip -q -o tModLoader.zip -d ../tModLoader
           
+      - name: Download & Install .NET Format
+        run: dotnet tool install -g dotnet-format
+
       - name: Create tModLoader.targets file
         shell: bash
         run: |
@@ -26,7 +29,7 @@ jobs:
           EOF
 
       - name: Reformat mod solution
-        run: dotnet format style EndlessEscapade.sln
+        run: dotnet format style EndlessEscapade.sln --verify-no-warnings
 
       - name: Build mod solution
         run: dotnet build EndlessEscapade.sln --configuration Release
