--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           EOF
 
       - name: Reformat mod solution
-        run: dotnet format style EndlessEscapade.sln --verify-no-warnings
+        run: dotnet format style EndlessEscapade.sln --verify-no-changes
 
       - name: Build mod solution
         run: dotnet build EndlessEscapade.sln --configuration Release
