--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,12 @@
-name: Build Mod
+﻿name: Build Mod
 
 on:
   push:
     branches: [master]
   
+env:
+    TML_PATH_OVERRIDE: ..\Saves\
+
 jobs:
   build:
     runs-on: windows-latest
