--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,13 +35,13 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: EndlessEscapade.tmod
-          path: ..\Saves\tModLoader\Mods\EndlessEscapade.tmod
+          path: Saves/tModLoader/Mods/EndlessEscapade.tmod
 
       - name: Deploy .dll artifact
         uses: actions/upload-artifact@v3
         with:
           name: EndlessEscapade.dll
-          path: ./release/net6.0/EndlessEscapade.dll
+          path: release/net6.0/EndlessEscapade.dll
 
       - name: Deploy action across Discord
         uses: sarisia/actions-status-discord@v1  
