--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: EndlessEscapade.tmod
-          path: bin/Saves/tModLoader/Mods/EndlessEscapade.tmod
+          path: ./bin/Saves/tModLoader/Mods/EndlessEscapade.tmod
 
       - name: Deploy .dll artifact
         uses: actions/upload-artifact@v3
