Update build.yml and re-add &quot; to save path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,9 +29,7 @@ jobs:
           EOF
 
       - name: Build mod solution
-        run: |
-            dotnet build EndlessEscapade.sln --configuration Release
-            mkdir ./bin/Saves
+        run: dotnet build EndlessEscapade.sln --configuration Release
 
       - name: List all
         shell: bash
