--- a/EndlessEscapade.csproj
+++ b/EndlessEscapade.csproj
@@ -17,7 +17,7 @@
         <ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
 
         <!-- for github workflows -->
-        <ExtraBuildModFlags Condition="'$(TML_PATH_OVERRIDE)' != ''">$(ExtraBuildModFlags)-savedirectory $([System.IO.Path]::GetFullPath('.'))/$(TML_PATH_OVERRIDE) </ExtraBuildModFlags>
+        <ExtraBuildModFlags Condition="'$(TML_PATH_OVERRIDE)' != ''">$(ExtraBuildModFlags)-savedirectory &quot;$([System.IO.Path]::GetFullPath('.'))/$(TML_PATH_OVERRIDE)&quot; </ExtraBuildModFlags>
     </PropertyGroup>
     
     <ItemGroup>
