--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         if: always()
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK_DEPLOY }}
-          nodetail: true
-          title: New version of `Endless Escapade` is ready!
+          nocontext: true
+          title: New build of `Endless Escapade` is ready!
           description: |
             Click [here](https://github.com/EndlessEscapade/EndlessEscapade/actions/runs/${{ github.run_id }}) to view.
